# Polygone-Network

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COUNCIL_DECISIONS.md  COUNCIL_V2_RECONSIDERED.md  Cargo.toml  DECISIONS.md  DESIGN_SYSTEM.md  IMPROVEMENT_PLAN.md  LEGAL.md  PHILOSOPHY.md  POLYGONE-SPEC-1.0.0.txt  POLYGONE-SPEC-AUDIT.md  README.md  SECURITY.md  SPEC.md  STAGING.md  THREAT_MODEL.md  index.html
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: core.md  technical_debt.md  vision.md
.well-known/: security.txt
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: identity.rs  lib.rs  packet.rs
crates/core/: Cargo.toml
crates/core/src/: envelope.rs  error.rs  identity.rs  lib.rs
crates/core/src/time_sync/: engine.rs  filter.rs  mod.rs  protocol.rs  types.rs
crates/polygone-brain/: Cargo.toml
crates/polygone-brain/src/: lib.rs
crates/polygone-compute/: Cargo.toml
crates/polygone-compute/src/: lib.rs
crates/polygone-drive/: Cargo.toml
crates/polygone-drive/src/: lib.rs
crates/polygone-hide/: Cargo.toml
crates/polygone-hide/src/: lib.rs
crates/polygone-mesh/: Cargo.toml
crates/polygone-mesh/src/: lib.rs
crates/polygone-msg/: Cargo.toml
crates/polygone-msg/src/: lib.rs
crates/polygone-nodeos/: Cargo.toml
crates/polygone-nodeos/src/: lib.rs
crates/polygone-search/: Cargo.toml
crates/polygone-search/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  relay.rs
daemon/: Cargo.toml  SPEC.md
daemon/src/: allocator.rs  bandwidth.rs  cpu.rs  gpu.rs  lib.rs  main.rs  socket.rs  system.rs
daemon/src/policy/: glow_up.rs  mod.rs
daemon/src/resources/: linux.rs  macos.rs  mod.rs
docs/: index.html  kill-switch.md
polygone/: Cargo.toml  ECOSYSTEM.md  POLYGONE-PATTERNS.md  README.md
polygone/src/: lib.rs  main.rs  msg.rs
polygone/src/compute/: daemon.rs  lending.rs  mod.rs  protocol.rs  stealth.rs
polygone/src/computer/: mod.rs
polygone/src/crypto/: karma.rs  kem.rs  mod.rs  shamir.rs  sign.rs  symmetric.rs
polygone/src/economy/: mod.rs
polygone/src/ipc/: mod.rs
polygone/src/network/: discovery.rs  topology.rs
polygone/src/services/: mod.rs
polygone/src/tui/: app.rs  favorites.rs  views_params.rs  widgets.rs
polygone/web/: app.js  dashboard.css  plan.html
src/: identity.rs  main.rs
src/compute/: idle.rs  lending.rs
src/computer/: mod.rs
src/crypto/: error.rs  karma.rs  sign.rs
src/ipc/: mod.rs
src/network/: discovery.rs  mod.rs  node.rs  p2p.rs
src/protocol/: mod.rs  session.rs
src/server/: mod.rs
src/tui/: app.rs  mod.rs  views.rs  views_menu.rs  views_services.rs  widgets.rs
src/web/: assets.rs  mod.rs
web/: dashboard.css  dashboard.js  drive.css  drive.html  drive.js  index.html  landing.html  mesh.css  mesh.html  mesh.js  node.html  style.css
