[workspace]
resolver = "2"
members = [
    "polygone",
    "crates/common",
    "crates/app",
    "crates/polygone-msg",
    "crates/polygone-drive",
    "crates/polygone-hide",
    "crates/polygone-mesh",
    "crates/polygone-brain",
    "crates/polygone-search",
    "crates/polygone-compute",
    "crates/polygone-nodeos",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["L-VS <l-vs@polygone.local>"]
license = "MIT"
publish = false
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pqc_kyber = "0.7"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
libp2p = { version = "0.55", features = ["kad", "noise", "tcp", "yamux", "mdns", "identify"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"