[package]
name = "polygone"
version = "2.0.0-rc1"
edition = "2021"
authors = ["Lévy <polygone@proton.me>"]
description = "Post-quantum ephemeral privacy network — ML-KEM-1024 · Shamir 4-of-7 · AES-256-GCM"
license = "MIT"
repository = "https://github.com/lvs0/Polygone-Network"
keywords = ["post-quantum", "p2p", "privacy", "cryptography", "ephemeral"]
categories = ["cryptography", "network-programming", "command-line-utilities"]
rust-version = "1.75"
publish = false

[lib]
name = "polygone"
path = "src/lib.rs"

[[bin]]
name = "polygone"
path = "src/main.rs"

[[bin]]
name = "polygone-server"
path = "src/bin/polygone-server.rs"

[[bin]]
name = "polygone-install"
path = "src/bin/polygone-install.rs"

[dependencies]
# Post-Quantum KEM (ML-KEM-1024, NIST FIPS 203)
pqcrypto-mlkem    = "0.1"
pqcrypto-traits   = "0.3"

# Post-Quantum Signatures (ML-DSA-65, NIST FIPS 204) — handshake-friendly sweet spot
pqcrypto-mldsa    = "0.1"

# Symmetric encryption (AES-256-GCM)
aes-gcm          = { version = "0.10", features = ["aes"] }

# Hashing (BLAKE3)
blake3           = "1"

# Secure memory clearing
zeroize          = { version = "1", features = ["derive"] }
subtle           = "2"

# Ed25519 (legacy/ML-DSA-swap-ready)
ed25519-dalek    = { version = "2", features = ["rand_core"] }

# Shamir Secret Sharing
sharks           = { version = "0.5", default-features = false }
rand             = "0.8"
getrandom        = "0.2"

# Async runtime
tokio            = { version = "1", features = ["full"] }
async-trait      = "0.1"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
toml             = "0.5"
bincode          = "1"
hex              = "0.4"
sha2             = "0.10"

# Error handling
thiserror        = "1"
anyhow           = "1"

# CLI & logging
clap             = { version = "4", features = ["derive", "env"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
dirs             = "5"
libc             = "0.2"

# HTTP
reqwest          = { version = "0.12", features = ["json"] }

# TUI (Ratatui)
ratatui          = "0.30"
crossterm        = "0.29"

# P2P (libp2p)
libp2p           = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "kad",
    "request-response",
    "cbor",
    "identify",
    "gossipsub",
    "mdns",
    "autonat",
    "relay",
    "dcutr",
    "ping"
] }

[dev-dependencies]
criterion        = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
