[workspace]
resolver = "2"
members = [
    "daemon",
    "crates/core",
    "crates/relay",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Lévy Verpoort Scherpereel <relay-lvs0@protonmail.com>"]
repository = "https://github.com/lvs0/Polygone-Network"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
dirs = "5"
chrono = { version = "0.4", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
