[package]
name = "polygoned"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lightweight resource allocation daemon for Polygone P2P network"

[[bin]]
name = "polygoned"
path = "src/main.rs"

[dependencies]
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
ctrlc = "3"
libc = "0.2"
toml = "0.8"
chrono = { workspace = true }
serde_cbor = "0.11"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_NetworkManagement_IpHelper", "Win32_System_SystemInformation", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Services", "Win32_UI_Input"] }
windows-service = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"