[package]
name = "polygone-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Polygone common types — Packet, SessionKey, NodeId, serialization"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
