[package]
name = "polygone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polygone core — types, primitives, wire protocol (no network deps)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = "0.11"
thiserror = { workspace = true }
log = { workspace = true }
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }
