[package]
name = "polygone-brain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polygone-brain — local quantized LLM inference with Petals fallback"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
