[package]
name = "polygone-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polygone-compute — Polygone v2 extended service"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.9"
