[package]
name = "polygone-hide"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polygone-hide — SOCKS5 anonymizing proxy"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
