[package]
name = "polygone-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polygone-mesh — local mesh network (mDNS Wi-Fi + Bluetooth) with load balancing"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
