[package]
name = "polygone-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "polygone-search — Polygone v2 extended service"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
