[package]
name = "polygone-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polygone relay — stateless, blind router (\"on voit rien\")"

[dependencies]
polygone-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
